<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="toolbar_title">Real Estate Manager</string>
    <string name="bottom_nav_menu_map_view">Map</string>
    <string name="bottom_nav_menu_list_view">List</string>
    <string name="settings">Simulator</string>
    <string name="search_button">Search</string>
    <string name="add_icon">Add icon</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="edit_icon">edit</string>
    <string name="edit">edit</string>
    <string name="search_title">Search in properties</string>
    <string name="add_property_title">Add a property</string>
    <string name="simulator_title">Simulate a home loan</string>
    <string name="add_edit_general_title">General information of the property</string>
    <string name="add_edit_detailed_title">Detailed information of the property</string>
    <string name="edit_title">Edit a property</string>
    <string name="save_property">save_property</string>
    <string name="property_details_title">The property in details</string>
    <string name="cancel_add_edit_title">Cancel the addition or the change</string>
    <string name="confirm_cancel_message">If you confirm, your changes won\'t be saved</string>
    <string name="cancel_button">Yes,\ cancel</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="continue_button">No, continue</string>
    <string name="continue_button_text">No, continue</string>
    <string name="next">Next</string>
    <string name="next_button">Next</string>
    <string name="property_type">Property type\ *</string>
    <string name="price">Price\ *</string>
    <string name="surface">Surface</string>
    <string name="address">Address</string>
    <string name="add_a_photo">Add a photo…*</string>
    <string name="dollars">Dollars</string>
    <string name="square_meters">Square meters</string>
    <string name="city">City\ *</string>
    <string name="add_a_property">Add a property</string>
    <string name="save">Save</string>
    <string name="room_number">Room number\ *</string>
    <string name="room_number_details">Room number</string>
    <string name="description">Description</string>
    <string name="rooms">Rooms</string>
    <string name="entry_date">Entry date\ *</string>
    <string name="entry_date_details">Entry date</string>
    <string name="agent">Agent\ *</string>
    <string name="agent_detail">Agent</string>
    <string name="sold_property">Sold property</string>
    <string name="sold_date">Sold date</string>
    <string name="required">*</string>
    <string name="hint_required">* Required</string>
    <string name="property_photo">Property photo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="location">Location</string>
    <string name="on_sale">On sale ?</string>
    <string name="otherwise_sold_date">Otherwise, sold date :</string>
    <string name="points_of_interest">Points of interest :</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="square_m">\ sq m</string>
    <string name="permissions_required">Permissions required</string>
    <string name="photo_permission_text">At last one photo is required for each property</string>
    <string name="accept_permissions">Accept permissions</string>
    <string name="take_photo">Take Photo...</string>
    <string name="choose_photo">Choose from Gallery...</string>
    <string name="photo">Photo</string>
    <string name="room">Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="living_room">Living Room</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="garden">Garden</string>
    <string name="title">Title</string>
    <string name="notification_text">Property saved with success !</string>
    <string name="notification_title">Real Estate Manager</string>
    <string name="default_notification_channel_id">com.google.firebase.messaging.default_notification_channel_id</string>
    <string name="my_position">My position</string>
    <string name="property_location_in_map">Property location in map</string>
    <string name="schools">Schools :\ </string>
    <string name="shops">Supermarkets :\ </string>
    <string name="parks">Parks :\ </string>
    <string name="no_internet_text">You\'re not connected to the internet, map will be displayed when you are connected in again.</string>
    <string name="no_internet_title">No internet connection</string>
    <string name="ok">Ok</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="to">to</string>
    <string name="min_surface">Min surface</string>
    <string name="max_surface">Max surface</string>
    <string name="max_room_number">Max room number</string>
    <string name="min_room_number">Min room number</string>
    <string name="search_entry_date">Entrance from</string>
    <string name="type">Type</string>
    <string name="search_location">Location</string>
    <string name="sold_properties">Sold properties</string>
    <string name="sold_since">Sold since</string>
    <string name="cancel_research">Cancel the research</string>
    <string name="text_view_main">\"Le premier bien immobilier enregistré vaut \"</string>
    <string name="property_price">Property price</string>
    <string name="contribution">Contribution</string>
    <string name="rate">Rate</string>
    <string name="percent">%</string>
    <string name="duration">Duration</string>
    <string name="simulate">Simulate</string>
    <string name="monthly_payments">Monthly payments :</string>
    <string name="simulate_to_get_a_result">Simulate to get a result here</string>
    <string name="years">Years</string>
</resources>
