<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_property_price_simulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:hint="@string/property_price"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/tf_contribution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="@string/dollars">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_property_price_simulator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_contribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:hint="@string/contribution"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/tf_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_property_price_simulator"
        app:suffixText="@string/dollars">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_contribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:hint="@string/rate"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/tf_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_contribution"
        app:suffixText="@string/percent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:hint="@string/duration"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/bt_simulate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_rate"
        app:suffixText="@string/years">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_simulate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/simulate"
        android:text="@string/simulate"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/tv_result_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_duration" />

    <TextView
        android:id="@+id/tv_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/monthly_payments"
        android:text="@string/monthly_payments"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_simulate" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/simulate_to_get_a_result"
        android:text="@string/simulate_to_get_a_result"
        android:textColor="@color/color_primary"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_title" />

</androidx.constraintlayout.widget.ConstraintLayout>