<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_room_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:hint="@string/room_number"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/tf_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="@string/rooms">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_room_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:hint="@string/description"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/tf_entry_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_room_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_entry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:hint="@string/entry_date"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/tf_agent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_description"
        app:startIconDrawable="@drawable/ic_baseline_calendar_month_24"
        app:startIconTint="@color/color_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_entry_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_agent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:hint="@string/agent"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/switch_sold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_entry_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_sold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_margin"
        android:checked="false"
        android:text="@string/sold_property"
        app:layout_constraintBottom_toTopOf="@id/bt_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_agent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_sold_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/basic_margin"
        android:hint="@string/sold_date"
        android:minWidth="188dp"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/bt_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_agent"
        app:startIconDrawable="@drawable/ic_baseline_calendar_month_24"
        app:startIconTint="@color/color_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sold_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/basic_margin"
        android:contentDescription="@string/hint_required"
        android:text="@string/hint_required"
        app:layout_constraintBottom_toTopOf="@id/bt_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_sold" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save"
        android:text="@string/save"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_sold" />

</androidx.constraintlayout.widget.ConstraintLayout>